@@ -1919,6 +1919,17 @@
       </component>
     </version>
   </module>
+  <module name="gnomechat">
+    <version release="gnome-2.1-extras">
+      <component name="gnomechat" dir="gnomechat">
+	<podir dir="po"/>
+	<potname name="gnomechat.pot"/>
+	<branch name="HEAD"/>
+	<regenerate/>
+	<download/>
+      </component>
+    </version>
+  </module>
   <module name="gnomemeeting">
     <version release="gnome-2.0-fifth-toe">
       <component name="gnomemeeting" dir="gnomemeeting">
