@@ -1,3 +1,7 @@
+2003-01-11  Christian Rose  <menthos@menthos.com>
+
+	* translation-status.xml: Added gnomechat to 2.1-extras.
+
 2003-01-10  Christian Rose  <menthos@menthos.com>
 
 	* translation-status.xml: Fixed pot file name for gal in
